; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dnode.c_dnode_fini.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dnode.c_dnode_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dnode_ksp = common dso_local global i32* null, align 8
@dnode_cache = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dnode_fini() #0 {
  %1 = load i32*, i32** @dnode_ksp, align 8
  %2 = icmp ne i32* %1, null
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i32*, i32** @dnode_ksp, align 8
  %5 = call i32 @kstat_delete(i32* %4)
  store i32* null, i32** @dnode_ksp, align 8
  br label %6

6:                                                ; preds = %3, %0
  %7 = load i32*, i32** @dnode_cache, align 8
  %8 = call i32 @kmem_cache_destroy(i32* %7)
  store i32* null, i32** @dnode_cache, align 8
  ret void
}

declare dso_local i32 @kstat_delete(i32*) #1

declare dso_local i32 @kmem_cache_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
